Fixed scrolling issue when star is off screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,17 @@
-@import url("http://fonts.googleapis.com/css?family=Montserrat");
+@import url("http://fonts.googleapis.com/css?family=Montserrat|Viga");
 
 body
 {
   margin:0 !important;
   display:none;
-  overflow:hidden;
+}
+
+#page
+{
+  position:fixed; 
+  overflow:hidden; 
+  height:100%; 
+  width:100%;
 }
 
 #shooting-star
@@ -111,6 +118,17 @@ body
 {
   width:75%;
   margin:auto;
+}
+
+#soci-desc
+{
+  position:absolute;
+  padding:5px;
+  left:30%;
+  width:40%;
+  margin:auto;
+  height:30px;
+/*  background-color:#000;*/
 }
 
 #soci-wrap ul
